<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_new_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_save"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:onClick="onClickSave"/>
            <Button
                android:id="@+id/add_new_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                android:background="@color/transparent"
                android:onClick="onClickCancel" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_delete"
                android:onClick="onClickDelete"
                android:background="@color/transparent"
                android:layout_toStartOf="@id/add_new_save"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/hint_title"
                android:textSize="30sp"
                android:singleLine="true"
                android:textColor="@color/gray"/>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="100dp"
                        android:gravity="top"
                        android:hint="@string/hint_content"
                        android:enabled="true"
                        android:background="@android:color/transparent"
                        android:textColorLink="@color/linkie"
                        android:contextClickable="true"
                        android:keepScreenOn="true"
                        android:linksClickable="true"
                        android:autoLink="all"
                        android:textSize="20sp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

                </android.support.v4.widget.NestedScrollView>

                <android.support.design.bottomappbar.BottomAppBar
                    android:id="@+id/add_new_bottom_app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:fabAlignmentMode="end"
                    android:backgroundTint="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
                    android:elevation="30dp"
                    app:hideOnScroll="true"
                    app:menu="@menu/bottom_appbar_menu">
                </android.support.design.bottomappbar.BottomAppBar>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_new_material_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_mic_black_24dp"
                    app:layout_anchor="@id/add_new_bottom_app_bar"/>

            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>
    <!--</ScrollView>-->
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>